# zero2prod

./: Cargo.toml  Dockerfile
configuration/: base.yaml
migrations/: 20230107205740_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
