[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum="0.6.1"
http = "0.2.8"
hyper = "0.14.23"
reqwest = "0.11.13"
serde = {version="1.0.152", features = ["derive"]}
tokio = {version = "1.22.0", features = ["rt-multi-thread", "fs", "macros"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
config = "0.13.3"

[dependencies.sqlx]
version = "0.6.2"
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
