[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum={version ="0.6.1", features = ['macros']}
http = "0.2.8"
hyper = "0.14.23"
reqwest = "0.11.13"
serde = {version="1.0.152", features = ["derive"]}
tokio = {version = "1.22.0", features = ["rt-multi-thread", "fs", "macros"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ['env-filter']}
config = "0.13.3"
chrono = "0.4.23"
uuid = {version = "1.2.2", features = ["v4"]}
tower-http = {version = "0.3.5", features = ['trace', 'request-id']}
tracing-bunyan-formatter = "0.3.4"
once_cell = "1.17.0"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
